[gd_scene load_steps=2 format=3 uid="uid://dyiur618bld5j"]

[ext_resource type="Script" path="res://main.gd" id="1_de3h6"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_de3h6")

[node name="SQLNode" type="SQLNode" parent="."]

[node name="Container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="RunCommands" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Run Commands"

[connection signal="on_error" from="SQLNode" to="." method="handle_sql_error"]
[connection signal="pressed" from="Container/VBoxContainer/RunCommands" to="." method="handle_run_commands_pressed"]
